fixed index.html scripts

--- a/index.html
+++ b/index.html
@@ -840,8 +840,8 @@
     <!-- Scripts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.min.js"></script>
-    <script src="js/paint.js"></script>
-    <script src="js/project-manager.js"></script>
-    <script src="js/tag-manager.js"></script>
+    <script src="public/js/paint.js"></script>
+    <script src="public/js/project-manager.js"></script>
+    <script src="public/js/tag-manager.js"></script>
 </body>
 </html>
