--- a/index.html
+++ b/index.html
@@ -843,7 +843,7 @@
                         <input type="checkbox" id="startArrow" style="margin: 0 3px 0 0;"> Start
                     </label>
                     <label style="font-size: 12px; margin: 0;">
-                        <input type="checkbox" id="endArrow" checked style="margin: 0 3px 0 0;"> End
+                        <input type="checkbox" id="endArrow" style="margin: 0 3px 0 0;"> End
                     </label>
                 </div>
                 <input type="color" id="colorPicker" value="#1a73e8" style="display:none;">
