fixed straight line arrow issue

--- a/index.html
+++ b/index.html
@@ -862,13 +862,25 @@
                         <button id="scaleButton" class="dropdown-btn">Scale: 100% ▼</button>
                         <div class="dropdown-content dropdown-up">
                             <div class="scale-option" data-scale="0.1">10%</div>
+                            <div class="scale-option" data-scale="0.15">15%</div>
+                            <div class="scale-option" data-scale="0.2">20%</div>
                             <div class="scale-option" data-scale="0.25">25%</div>
+                            <div class="scale-option" data-scale="0.33">33%</div>
                             <div class="scale-option" data-scale="0.5">50%</div>
+                            <div class="scale-option" data-scale="0.67">67%</div>
                             <div class="scale-option" data-scale="0.75">75%</div>
+                            <div class="scale-option" data-scale="0.8">80%</div>
+                            <div class="scale-option" data-scale="0.9">90%</div>
                             <div class="scale-option" data-scale="1" data-default="true">100%</div>
+                            <div class="scale-option" data-scale="1.1">110%</div>
                             <div class="scale-option" data-scale="1.25">125%</div>
                             <div class="scale-option" data-scale="1.5">150%</div>
+                            <div class="scale-option" data-scale="1.75">175%</div>
                             <div class="scale-option" data-scale="2">200%</div>
+                            <div class="scale-option" data-scale="2.5">250%</div>
+                            <div class="scale-option" data-scale="3">300%</div>
+                            <div class="scale-option" data-scale="4">400%</div>
+                            <div class="scale-option" data-scale="5">500%</div>
                         </div>
                     </div>
                     <div class="keyboard-shortcuts">
