I fixed save as pdf

--- a/index.html
+++ b/index.html
@@ -846,6 +846,7 @@
                     <button id="loadProject" title="Load project from ZIP file">Load Project</button>
                     <button id="generateMeasurements" title="Generate list of all measurements">Generate Measurements</button>
                     <button id="saveAllImages" title="Save all images as individual files">Save All Images</button>
+                    <button id="saveAsPdf" title="Export measurements as PDF form">Save as PDF</button>
                 </div>
             </div>
         </div>
@@ -965,7 +966,7 @@
     <div id="statusMessage"></div>
     
     <!-- Scripts -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/3.0.1/jspdf.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.min.js"></script>
     <script src="public/js/paint.js"></script>
