tool bars to the sides

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
         }
         .image-sidebar {
             width: 220px;
-            position: absolute;
+            position: fixed;
             top: 20px;
-            right: 20px;
+            right: 0px;
             background: #f5f5f5;
             padding: 15px;
             border-radius: 4px;
@@ -48,9 +48,9 @@
         }
         .stroke-sidebar {
             width: 220px;
-            position: absolute;
+            position: fixed;
             top: 20px;
-            left: 20px;
+            left: 0px;
             background: #f5f5f5;
             padding: 15px;
             border-radius: 4px;
