--- a/index.html
+++ b/index.html
@@ -4303,8 +4303,8 @@
     </div>
 
     <script>console.log('[INDEX] before paint.js'); window.onerror=(m,s,l,c,e)=>console.error('[INDEX] onerror',m,s,l,c,e);</script>
-    <script src="/js/paint.js?v=20250819"></script>
-    <script src="/js/project-manager.js?v=20250819"></script>
-    <script src="/js/tag-manager.js?v=20250819"></script>
+    <script src="public/js/paint.js?v=20250819"></script>
+    <script src="public/js/project-manager.js?v=20250819"></script>
+    <script src="public/js/tag-manager.js?v=20250819"></script>
 </body>
 </html>
